--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,54 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@layer base {
+  h1 {
+    @apply text-xl;
   }
-  body {
-    color: white;
-    background: black;
+}
+
+@layer components {
+  .cursor {
+    @apply absolute bg-[#ffffff] left-0 top-0 w-[3px] h-[1.75rem] transition-all;
+  }
+
+  .word {
+    @apply whitespace-pre px-2;
+  }
+
+  .char {
+    @apply p-0;
+  }
+
+  .right {
+    @apply text-green-300;
+  }
+
+  .wrong {
+    @apply text-red-300;
+  }
+
+  .extra {
+    @apply text-red-300;
+  }
+
+  .unfocused {
+    @apply blur-sm;
+  }
+
+  /* video {
+    -o-filter: blur(5px);
+    filter: blur(5px);
+  } */
+
+  #canvas_filter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
   }
 }
