Started working on state logic

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,10 +37,40 @@
     @apply blur-sm;
   }
 
-  /* video {
-    -o-filter: blur(5px);
-    filter: blur(5px);
-  } */
+  .spinner {
+    animation: rotate 2s linear infinite;
+    z-index: 2;
+    margin: -25px 0 0 -25px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .path {
+    stroke: #ffffff;
+    stroke-linecap: round;
+    animation: dash 1.5s ease-in-out infinite;
+  }
+
+  @keyframes rotate {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  @keyframes dash {
+    0% {
+      stroke-dasharray: 1, 150;
+      stroke-dashoffset: 0;
+    }
+    50% {
+      stroke-dasharray: 90, 150;
+      stroke-dashoffset: -35;
+    }
+    100% {
+      stroke-dasharray: 90, 150;
+      stroke-dashoffset: -124;
+    }
+  }
 
   #canvas_filter {
     position: absolute;
