Optimized char length to fit typetest box

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,11 +14,11 @@
   }
 
   .word {
-    @apply whitespace-pre px-2;
+    @apply whitespace-pre pr-[12px];
   }
 
   .char {
-    @apply p-0;
+    @apply p-0 w-4 h-4;
   }
 
   .right {
